# x3

./: .cvsignore  .gitignore  .mailmap  AUTHORS  CLAUDE.md  ChangeLog  ChangeLog.SH  ChangeLog.X3  ChangeLog.classic  Dockerfile  FAQ  INSTALL  Makefile.am  Makefile.in  Makefile.win32  README  UPGRADE  autogen.sh  chanserv.help  config.guess  config.sub  configure  configure.ac  configure.in  install-r.sh  ltmain.sh  mkinstalldirs  modcmd.help  nickserv.help  srvx  srvx.conf.example  x3.conf.example
docker/: dockerentrypoint.sh  x3.conf-dist
docs/: DEFCON  access-levels.txt  coding-style.txt  helpserv.txt
languages/: README.txt  lang_export.sh
languages/de/: chanserv.help
languages/en_GB/: chanserv.help
patches/: helpserv-pgsql.diff  log-pgsql.diff  srvx-bantypes.diff
rx/: .cvsignore  Makefile.in  README
src/: .cvsignore  Makefile.am  Makefile.in  alloc-slab.c  alloc-srvx.c  alloc-x3.c  base64.c  chanserv.c  chanserv.h  chanserv.help  common.h  compat.c  compat.h  conf.c  conf.h  config.h.in  dict-splay.c  dict.h  eventhooks.c  eventhooks.h  getopt.c  getopt.h  getopt1.c  gline.c  gline.h  global.c  global.h  global.help  hash.c  hash.h  heap.c  heap.h  helpfile.c  helpfile.h  hosthiding.c  hosthiding.h  ioset-epoll.c  ioset-impl.h  ioset-kevent.c  ioset-select.c  (+67 more)
src/plugins/: README  __init__.py
src/plugins/annoy/: plugin.py
src/plugins/hangman/: __init__.py  plugin.py
tests/: .cvsignore
tools/: core_install.sh  db.php  mambo_srvx2_link.tgz  mrsnoopy.pl  tre_install.sh
tools/ldap/: inetorganon.schema  ldap_convert.php
